[project]
name = "runson"
version = "0.1.0"
description = "Tooling to help understand runs-on.com configuration and options"
readme = "src/runson/README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "click>=8.0",
    "colorlog>=6.0",
]

[project.optional-dependencies]
dev = [
    "libcst>=1.0",
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-sugar>=1.0",
    "pytest-cov>=6.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
runson = "runson.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runson"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
packages = ["runson"]
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
